added body padding to css

--- a/site_styling.css
+++ b/site_styling.css
@@ -5,6 +5,11 @@ body {
   font-family: 'Share Tech Mono', monospace;
 }
 
+body_style {
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
 .topnav {
   overflow: hidden;
   --background-color: #333;
