--- a/css/site_styling.css
+++ b/css/site_styling.css
@@ -1,3 +1,33 @@
+.animated { 
+  /* background-image: url(/css/images/logo.png); 
+  background-repeat: no-repeat;
+  background-position: left top;  */
+  padding-top:25px;
+  margin-bottom:60px;
+  -webkit-animation-duration: 1s;
+  animation-duration: .5s; 
+  -webkit-animation-fill-mode: both; 
+  animation-fill-mode: both; 
+  -webkit-animation-iteration-count: 3;
+}
+
+@-webkit-keyframes bounce { 
+  0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);} 
+  40% {-webkit-transform: translateY(-30px);} 
+  60% {-webkit-transform: translateY(-15px);} 
+} 
+
+@keyframes bounce { 
+  0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
+  40% {transform: translateY(-30px);} 
+  60% {transform: translateY(-15px);} 
+}
+
+.bounce { 
+  -webkit-animation-name: bounce; 
+  animation-name: bounce; 
+}
+
 body {
   margin: 0;
   padding: 0px;
@@ -10,42 +40,115 @@ body {
     padding-right: 16px;
 }
 
-.topnav {
+.border { 
+  border-width: 3px; 
+  border-color: #b8a01a; 
+  border-style: solid; 
+} 
+
+.contact_form {
+  border-radius: 0px;
+  border-width: 3px; 
+  border-color: #000; 
+  border-style: solid; 
+  background-color: #b8a01a;
+  padding: 20px;
+}
+
+h1 {
+  /* margin-left: 20px;
+  margin-right: 20px; */
+  text-align: center;
+}
+
+h2 {
+  /* margin-left: 20px;
+  margin-right: 20px; */
+  text-align: center;
+}
+
+input[type=text], [type=file], [type=email], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #000;
+  border-radius: 0px;
+  box-sizing: border-box;
+  background-color: whitesmoke;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #000;
+  color: #f5f5f5;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 0px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #f5f5f5;
+  color: #000;
+  border-radius: 0px;
+  
+}
+
+.logo {
+  padding-left: 55px;
+  padding-top: 55px;
   overflow: auto;
-  padding-top: 40px;
   --position: fixed;
 }
 
 .menubackground {
   width: auto;
-  height: 350px;
+  height: 50px;
   border: 7px double #b8a01a; 
   --position: fixed;
   padding: 35px;
-  overflow: auto;
+  /* overflow: auto; */
   background-image: url("../images/black_tech.jpg");
 }
 
-.logo {
-    padding-left: 55px;
-    padding-top: 55px;
-    overflow: auto;
-    --position: fixed;
+.message_styling {
+  background-color: #b8a01a;
+  border: 3px solid #000;
+}
+
+.topnav {
+  /* overflow: auto; */
+  padding-top: 35px;
+  /* padding-right: 0px; */
+  /* --position: fixed; */
 }
 
 .topnav a {
   float: right;
   color: whitesmoke;
-  text-align: center;
+  text-align: right;
   padding: 14px 62px;
   text-decoration: none;
   font-family: 'Share Tech Mono', monospace;
   font-size: 20px;
 }
 
-.topnav a:hover {
+.topnav i {
+  float: right;
+  padding-bottom: 3px;
+  color: #b8a01a;
+  /* color: whitesmoke;
+  text-align: right; */
+  /* padding: -7px 38px; */
+  /* text-decoration: none;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: 20px; */
+}
+
+.topnav i:hover {
+  color: whitesmoke;
   background-color: #b8a01a;
-  color: #000;
 }
 
 .topnav a.active {
@@ -53,24 +156,47 @@ body {
   color: #000;
 }
 
-.border { 
-    border-width: 3px; 
-    border-color: #b8a01a; 
-    border-style: solid; 
-} 
-
-h1 {
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-h2 {
-    margin-left: 20px;
-    margin-right: 20px;
+.topnav a:hover {
+  background-color: #b8a01a;
+  color: #000;
 }
 
 p {
-    margin-left: 20px;
-    margin-right: 20px;
+    /* margin-left: 20px;
+    margin-right: 20px; */
+    text-align: center;
 }
 
+/* .resume_window {
+  background-color: #b8a01a;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
+  height: 785px;
+} */
+
+.resume_window {
+  width: 75%;
+  height: 785px;
+  border-width: 3px; 
+  border-color: #000; 
+  border-style: solid; 
+  margin: auto;
+  background-color: #b8a01a;
+  -webkit-animation-name: iframe_animation; /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 7s; /* Safari 4.0 - 8.0 */
+  animation-name: iframe_animation;
+  animation-duration: 7s;
+}
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes iframe_animation {
+  from {background-color: #000;}
+  to {background-color: #b8a01a;}
+}
+
+/* Standard syntax */
+@keyframes iframe_animation {
+  from {background-color: #000;}
+  to {background-color: #b8a01a;}
+}
