--- a/css/site_styling.css
+++ b/css/site_styling.css
@@ -1,26 +1,30 @@
-.animated { 
-  /* background-image: url(/css/images/logo.png); 
-  background-repeat: no-repeat;
-  background-position: left top;  */
+.animated {
   padding-top:25px;
   margin-bottom:60px;
-  -webkit-animation-duration: 1s;
-  animation-duration: .5s; 
+  -webkit-animation-duration: 4s;
+  animation-duration: 2s; 
   -webkit-animation-fill-mode: both; 
   animation-fill-mode: both; 
-  -webkit-animation-iteration-count: 3;
+  -webkit-animation-iteration-count: 1;
 }
 
 @-webkit-keyframes bounce { 
-  0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);} 
-  40% {-webkit-transform: translateY(-30px);} 
-  60% {-webkit-transform: translateY(-15px);} 
+  0%, 100% {-webkit-transform: translateY(0);}
+  33% {-webkit-transform: rotateX(160deg);} 
+  66% {-webkit-transform: rotateY(160deg);} 
 } 
 
-@keyframes bounce { 
+/* @keyframes bounce { 
   0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
-  40% {transform: translateY(-30px);} 
-  60% {transform: translateY(-15px);} 
+  10%{transform: translateX(-30px);}
+  25%{transform: translateX(-15px);}
+  40% {transform: translateY(-35px);} 
+  60% {transform: translateY(-20px);} 
+} */
+@keyframes bounce { 
+  0%,100% {transform: translateY(0);} 
+  33%{transform: rotateX(160deg);}
+  66%{transform: rotateY(160deg)}
 }
 
 .bounce { 
@@ -55,19 +59,23 @@ body {
   padding: 20px;
 }
 
+.dropdown-content a {
+  color: black;
+  background-color: #b8a01a;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
 h1 {
-  /* margin-left: 20px;
-  margin-right: 20px; */
   text-align: center;
 }
 
 h2 {
-  /* margin-left: 20px;
-  margin-right: 20px; */
   text-align: center;
 }
 
-input[type=text], [type=file], [type=email], select, textarea {
+input[type=text], [type=file], [type=email], [id=inquiry], select, textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #000;
@@ -95,20 +103,11 @@ input[type=submit]:hover {
   
 }
 
-.logo {
-  padding-left: 55px;
-  padding-top: 55px;
-  overflow: auto;
-  --position: fixed;
-}
-
 .menubackground {
   width: auto;
   height: 50px;
   border: 7px double #b8a01a; 
-  --position: fixed;
-  padding: 35px;
-  /* overflow: auto; */
+  padding-bottom: 5px;
   background-image: url("../images/black_tech.jpg");
 }
 
@@ -117,38 +116,42 @@ input[type=submit]:hover {
   border: 3px solid #000;
 }
 
+.red {
+  color: red;
+}
+
 .topnav {
-  /* overflow: auto; */
-  padding-top: 35px;
-  /* padding-right: 0px; */
-  /* --position: fixed; */
+  /* padding-top: 40px; */
+  width: auto;
+  height: 30px;
+  border: 7px double #b8a01a; 
+  background-color: #b8a01a;
+  padding: 20px;
+  background-image: url("../images/black_tech.jpg");
+  /* overflow: hidden; */
 }
 
 .topnav a {
-  float: right;
+  float: left;
+  display: block;
   color: whitesmoke;
-  text-align: right;
-  padding: 14px 62px;
+  text-align: center;
+  padding: 5px 35px;
   text-decoration: none;
   font-family: 'Share Tech Mono', monospace;
   font-size: 20px;
 }
 
 .topnav i {
-  float: right;
+  float: left;
   padding-bottom: 3px;
   color: #b8a01a;
-  /* color: whitesmoke;
-  text-align: right; */
-  /* padding: -7px 38px; */
-  /* text-decoration: none;
-  font-family: 'Share Tech Mono', monospace;
-  font-size: 20px; */
 }
 
 .topnav i:hover {
   color: whitesmoke;
   background-color: #b8a01a;
+  background-size: auto
 }
 
 .topnav a.active {
@@ -161,22 +164,44 @@ input[type=submit]:hover {
   color: #000;
 }
 
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+    background-color: #000;
+  }
+
+  .topnav.responsive a:hover {
+    background-color: #b8a01a;
+    color: #000;
+  }
+}
+
 p {
-    /* margin-left: 20px;
-    margin-right: 20px; */
     text-align: center;
 }
 
-/* .resume_window {
-  background-color: #b8a01a;
-  margin-left: auto;
-  margin-right: auto;
-  width: 75%;
-  height: 785px;
-} */
-
 .resume_window {
-  width: 75%;
+  width: 95%;
   height: 785px;
   border-width: 3px; 
   border-color: #000; 
