updates to e portfolio pages.

--- a/css/site_styling.css
+++ b/css/site_styling.css
@@ -27,6 +27,18 @@
   66%{transform: rotateY(160deg)}
 }
 
+a {
+  color: #000;
+}
+
+a:visited {
+  color: #b8a01a;
+}
+
+a:hover {
+  color: #737373;
+}
+
 .bounce { 
   -webkit-animation-name: bounce; 
   animation-name: bounce; 
@@ -67,11 +79,33 @@ body {
   display: block;
 }
 
+.goals {
+  background-color: #737373;
+  border: 1px solid #b8a01a;
+  height: 390px;
+  width: 100%;
+  margin-top: 20px;
+  margin-right: 5px;
+}
+
+.goldul {
+  color: #b8a01a;
+}
+
+.goldunderline {
+  text-decoration: underline;
+  text-decoration-color: #b8a01a;
+}
+
 h1 {
   text-align: center;
 }
 
 h2 {
+  text-align: center;
+}
+
+h3 {
   text-align: center;
 }
 
@@ -103,6 +137,13 @@ input[type=submit]:hover {
   
 }
 
+.interest {
+  background-color: #a6a6a6;
+  border: 1px solid #b8a01a;
+  height: 390px;
+  width: 100%;
+  margin-right: 5px;
+}
 .menubackground {
   width: auto;
   height: 50px;
@@ -114,6 +155,15 @@ input[type=submit]:hover {
 .message_styling {
   background-color: #b8a01a;
   border: 3px solid #000;
+}
+
+.previous {
+  background-color: #8d8d8d;
+  border: 1px solid #b8a01a;
+  height: 390px;
+  width: 100%;
+  margin-top: 20px;
+  margin-right: 5px;
 }
 
 .red {
